feat: Add endpoint to retrieve OpenID Connect info
